--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "deploy": "npm run preDeploy && gh-pages -d public"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.1",
     "gatsby": "^2.4.2",
     "gatsby-cli": "^2.6.3",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.3.12",
     "html-react-parser": "^0.7.0",
@@ -28,7 +30,7 @@
     "react-router-dom": "^5.0.0",
     "react-slick": "^0.24.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
