--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "f97a-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Source code for personal website of F97A developer",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -15,31 +15,31 @@
     "deploy": "npm run preDeploy && gh-pages -d public"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.1",
-    "gatsby": "^2.4.2",
-    "gatsby-cli": "^2.6.3",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-transformer-remark": "^2.3.12",
-    "html-react-parser": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-intl": "^2.8.0",
-    "react-router-dom": "^5.0.0",
-    "react-slick": "^0.24.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "gatsby": "^2.17.7",
+    "gatsby-cli": "^2.8.8",
+    "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-styled-components": "^3.1.11",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.32",
+    "html-react-parser": "^0.9.1",
+    "node-sass": "^4.13.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-intl": "^3.4.0",
+    "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-sonarjs": "^0.3.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-sonarjs": "^0.4.0",
     "gatsby-plugin-i18n": "^1.0.1",
-    "gatsby-plugin-react-svg": "^2.1.1",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.17.0"
+    "gatsby-plugin-react-svg": "^2.1.2",
+    "gh-pages": "^2.1.1",
+    "prettier": "^1.18.2"
   },
   "repository": {
     "type": "git",
