--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "react-intl": "^3.4.0",
     "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
