--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "ci": "echo  \"CI start\"",
     "preDeploy": "gatsby build --prefix-paths",
     "deploy": "npm run preDeploy && gh-pages -d public"
   },
